Correctif alignement webicons

--- a/templates/expertInfos/theme/less/style.less
+++ b/templates/expertInfos/theme/less/style.less
@@ -71,17 +71,19 @@ table.columns td, table.column td { padding-bottom: 0; }
 }
 
 //réseaux sociaux
-.webicons .inner { height: 30px; }
+.webicons td { text-align: right; }
 .webicon {
-	display: block;
-	width: 30px;
-	height: 30px;
-	margin: 0 5px 5px 5px;
-	float: right;
-	border-radius: 5px;
-	line-height: 30px;
-	&.first { margin-right: 0; }
-	&.last { margin-left: 0; }
+	display: inline;
+	//pour supprimer les espaces
+	font-size: 0;
+	line-height: 0;
+	padding: 0 5px 5px 5px;
+	&.first { padding-left: 0; }
+	&.last { padding-right: 0; }
+	img {
+		display: inline;
+		border-radius: 5px;
+	}
 }
 
 // contentArticles area
